<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editReceiverText" android:layout_weight="0.04" android:hint="@string/EnterTargetEmail"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editSubjectText" android:layout_weight="0.04" android:hint="@string/EnterMessageSubject"
            android:gravity="center_vertical|left"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:id="@+id/editBodyText"
            android:textColor="@color/blue"
            android:focusableInTouchMode="true" android:clickable="true" android:hint="@string/EnterTextHere"
            android:gravity="start"
            android:maxLines="5"/>
    <Button
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:text="@string/Send"
            android:id="@+id/buttonSendMessage" android:layout_gravity="right"/>
</LinearLayout>